[package]
name = "poirot"
version = "0.3.0"
authors = ["Chris McDonald <mail.chris.mcdonald@gmail.com>"]
keywords = ["concurrent", "hash", "map"]
categories = ["algorithms", "concurrency", "data-structures"]
license = "MIT OR Apache-2.0"

[dependencies]
owning_ref = "0.3.3"
parking_lot = "0.5.5"

[dev-dependencies]
quickcheck = "^0.6"
criterion = { version = "^0.2", default-features = false }
lazy_static = "1"
rand = "0.4.2"
chashmap = "2.2.0"
rayon = "1.0.1"

[[bench]]
name = "map_benches"
harness = false